Fix: Filter Results drop down boxes would overlap when re-sizing to mobile. Fixed by updating the height to not be static and prettifying with top padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,9 +107,9 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
   background-color: #3397DB;
   align-items: center;
+  padding-top: 10px;
 }
 .filter-options h2 {
   color: white;
